# GPGPUWithOpenCL

./: .clang-format  .gitignore  CMakeLists.txt
include/: common_functions.h
kernels/: 01_vector_add.cl
src/: common_functions.cc
tests/: 00_test_opencl_env.cc  01_test_vector_add.cc  common_test_class.cc  common_test_class.h
